[gd_scene load_steps=16 format=3 uid="uid://c6hqssagt75up"]

[ext_resource type="Script" uid="uid://cfirxptqatr55" path="res://projectiles/BananaBoomerang/banana_boomerang.gd" id="1_g21ix"]
[ext_resource type="Texture2D" uid="uid://db8jtvki4pwdd" path="res://assets/sprites/attacks/bananas/banana_boomerang.png" id="1_q0566"]
[ext_resource type="Shader" uid="uid://2wjdt5jon1o6" path="res://shaders/halo_glow_shader.gdshader" id="3_wqwfh"]
[ext_resource type="Texture2D" uid="uid://dt547hb5yasmd" path="res://assets/sprites/attacks/explosion/banana_explosion.png" id="4_5us3k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eqhhy"]
size = Vector2(30, 30)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cx8vx"]
shader = ExtResource("3_wqwfh")
shader_parameter/glow_spread = 0.5
shader_parameter/glow_intensity = 1.5
shader_parameter/glow_color = Color(0.059, 0.059, 0, 0.5)

[sub_resource type="AtlasTexture" id="AtlasTexture_sqq2t"]
atlas = ExtResource("1_q0566")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5us3k"]
atlas = ExtResource("1_q0566")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8uiic"]
atlas = ExtResource("1_q0566")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v0bmq"]
atlas = ExtResource("1_q0566")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uc11o"]
atlas = ExtResource("4_5us3k")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cyxo8"]
atlas = ExtResource("4_5us3k")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwt8d"]
atlas = ExtResource("4_5us3k")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6gm5j"]
atlas = ExtResource("4_5us3k")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_uc11o"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sqq2t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5us3k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8uiic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v0bmq")
}],
"loop": true,
"name": &"banana_spin",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uc11o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cyxo8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwt8d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6gm5j")
}],
"loop": false,
"name": &"explode",
"speed": 15.0
}]

[node name="BananaBoomerang" type="Area2D" groups=["projectiles"]]
z_index = 1
z_as_relative = false
y_sort_enabled = true
scale = Vector2(1.5, 1.5)
collision_layer = 4
collision_mask = 35
script = ExtResource("1_g21ix")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_eqhhy")

[node name="ShadowContainer" type="Node2D" parent="."]
top_level = true

[node name="Shadow" type="ColorRect" parent="ShadowContainer"]
material = SubResource("ShaderMaterial_cx8vx")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = 9.0
offset_right = 20.0
offset_bottom = 49.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
metadata/_edit_use_anchors_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_uc11o")
animation = &"explode"

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
